# aoc

./: .gitignore  Cargo.toml
2015/: 1.ps1  10.cs  11.ps1  11.rs  12.ps1  14.ps1  15.rs  17.rs  18.html  18.rs  19-notes.txt  19.rs  2.ps1  20.rs  21.rs  22.rs  23.rs  24.rs  25.rs  3.ps1  4.cs  5.ps1  6.cs  6.html  7.ps1  8.ps1  9.ps1  Cargo.toml
2015/sixteen/: 16.rs  Cargo.toml
2015/thirteen/: 13.rs  Cargo.toml
2016/: 1.ps1  10.html  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  19.rs  2.rs  20.rs  20.txt  21.rs  22.rs  23.rs  24.rs  25.rs  3.rs  4.rs  5.rs  6.rs  7.rs  8.rs  9.rs  Cargo.toml
2017/: 1.rs  2.rs  3.rs  4.rs  5.rs
2018/: 1.rs  2.rs  3.html  4.rs  5.rs  6.rs  7.rs  8.rs
2019/: 1.rs  10.rs  11.rs  12.rs  12a.txt  12b.txt  13.rs  14.rs  2.rs  3.rs  4.rs  5.rs  6.rs  7.rs  8.rs  9.rs
2019/12/: index.html  moon.js  view.js
2023/: 1.rs  10.rs  11.ps1  12.rs  12test.txt  13.rs  14.rs  15.rs  16.rs  18.html  18b.html  19.rs  2.ps1  20.html  20.rs  3.rs  4.ps1  5.rs  6.ps1  7.rs  8.rs  9.ps1
kami/: aoeu.html  map.rs  map.txt
