[package]
name = "aoc"
version = "1.0.0"

[[bin]]
name = "aoc"
path = "2023/15.rs"
edition = "2021"

[dependencies]
md5 = "0.7.0"
#primal = "*"
regex = "1"
lazy_static = "*"
#termion = { git = "https://gitlab.redox-os.org/Jezza/termion", branch = "windows-support" }
#console = "*"
#permutohedron = "*"